[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/GunLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/PlayerGUI.gd" type="Script" id=2]
[ext_resource path="res://font/Lato-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font/alphbeta.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://font/alagard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://font/Minimal5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://font/Lato-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0, 0.156863, 0.345098, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 0.584314 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.0509804, 0, 0.537255 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.113725, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_top = 5.0
bg_color = Color( 0.160784, 0.160784, 0.160784, 0.784314 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.733333, 1, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 4 )

[node name="PlayerGUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSheet" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -240.0
margin_right = 390.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CharacterSheet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSheet/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 762.0
margin_bottom = 432.0
custom_constants/separation = 5

[node name="Number" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_right = 752.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "800"
align = 1

[node name="Stat1" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 752.0
margin_bottom = 55.0
custom_constants/separation = 12

[node name="LabelAddition" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat1"]
margin_right = 346.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Addition:"
align = 2

[node name="StatAddition" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat1"]
margin_left = 358.0
margin_right = 393.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="TooltipAddition" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat1"]
margin_left = 405.0
margin_right = 752.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.619608, 0.619608, 0.619608, 1 )
text = "0"

[node name="Stat2" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 752.0
margin_bottom = 80.0
custom_constants/separation = 12

[node name="LabelMultiplication" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat2"]
margin_right = 346.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Multiplication:"
align = 2

[node name="StatMultiplication" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat2"]
margin_left = 358.0
margin_right = 393.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="TooltipMultiplication" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat2"]
margin_left = 405.0
margin_right = 752.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.619608, 0.619608, 0.619608, 1 )
text = "0"

[node name="Stat3" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 752.0
margin_bottom = 105.0
custom_constants/separation = 12

[node name="LabelSubtraction" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat3"]
margin_right = 346.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Subtraction:"
align = 2

[node name="StatSubtraction" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat3"]
margin_left = 358.0
margin_right = 393.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="TooltipSubtraction" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat3"]
margin_left = 405.0
margin_right = 752.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.619608, 0.619608, 0.619608, 1 )
text = "0"

[node name="Stat4" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 752.0
margin_bottom = 130.0
custom_constants/separation = 12

[node name="LabelDivision" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat4"]
margin_right = 346.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Division:"
align = 2

[node name="StatDivision" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat4"]
margin_left = 358.0
margin_right = 393.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 0 )
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="TooltipDivision" type="Label" parent="CharacterSheet/MarginContainer/VBoxContainer/Stat4"]
margin_left = 405.0
margin_right = 752.0
margin_bottom = 20.0
mouse_filter = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.619608, 0.619608, 0.619608, 1 )
text = "0"

[node name="Stats" type="RichTextLabel" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 752.0
margin_bottom = 135.0
bbcode_text = "Addition: 0
Multiplication: 0
Subtraction: 0
"
text = "Addition: 0
Multiplication: 0
Subtraction: 0
"

[node name="Guns" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 752.0
margin_bottom = 397.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns"]
margin_right = 248.0
margin_bottom = 257.0
size_flags_horizontal = 3

[node name="Gun1" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns/PanelContainer" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 250.0
bbcode_text = "[code][color=yellow]Divide / Zero[/color]
Lvl 1[/code]
[color=lime][b]+2[/b][/color] This is regular text."
text = "Divide / Zero
Lvl 1
+2 This is regular text."
fit_content_height = false

[node name="PanelContainer2" type="PanelContainer" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 257.0
size_flags_horizontal = 3

[node name="Gun2" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns/PanelContainer2" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 250.0
bbcode_text = "[code][color=yellow]Divide / Zero[/color]
Lvl 1[/code]
[color=lime][b]+2[/b][/color] This is regular text."
text = "Divide / Zero
Lvl 1
+2 This is regular text."
fit_content_height = false

[node name="PanelContainer3" type="PanelContainer" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns"]
margin_left = 504.0
margin_right = 752.0
margin_bottom = 257.0
size_flags_horizontal = 3

[node name="Gun3" parent="CharacterSheet/MarginContainer/VBoxContainer/Guns/PanelContainer3" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 250.0
bbcode_text = "[code][color=yellow]Divide / Zero[/color]
Lvl 1[/code]
[color=lime][b]+2[/b][/color] This is regular text."
text = "Divide / Zero
Lvl 1
+2 This is regular text."
fit_content_height = false

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSheet/MarginContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 752.0
margin_bottom = 422.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="CharacterSheet/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 352.0
margin_right = 399.0
margin_bottom = 20.0
text = "Close"

[node name="LootScreen" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -240.0
margin_right = 390.0
margin_bottom = 210.0
rect_min_size = Vector2( 700, 400 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LootScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LootScreen/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 762.0
margin_bottom = 432.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="LootScreen/MarginContainer/VBoxContainer"]
margin_right = 752.0
margin_bottom = 14.0
text = "New Weapon"
align = 1

[node name="Panel" type="PanelContainer" parent="LootScreen/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 752.0
margin_bottom = 188.0
size_flags_vertical = 3

[node name="NewGun" parent="LootScreen/MarginContainer/VBoxContainer/Panel" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 745.0
margin_bottom = 162.0
bbcode_text = "[code][color=yellow]Divide / Zero[/color] - Lvl 1[/code]
[color=lime][b]+2[/b][/color] This is regular text.
[color=lime][b]+2[/b][/color] This is regular text.
[color=lime][b]+2[/b][/color] This is regular text.
"
text = "Divide / Zero - Lvl 1
+2 This is regular text.
+2 This is regular text.
+2 This is regular text.
"

[node name="HBoxContainer" type="HBoxContainer" parent="LootScreen/MarginContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 752.0
margin_bottom = 397.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="PanelContainer" type="PanelContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 204.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 197.0

[node name="CurrentGun1" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 234.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="EquipButton1" type="Button" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 234.0
margin_bottom = 190.0
text = "Equip"

[node name="PanelContainer2" type="PanelContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 204.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 197.0

[node name="CurrentGun2" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 234.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="EquipButton2" type="Button" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 170.0
margin_right = 234.0
margin_bottom = 190.0
text = "Equip"

[node name="PanelContainer3" type="PanelContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 752.0
margin_bottom = 204.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 197.0

[node name="CurrentGun3" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 234.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="EquipButton3" type="Button" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/VBoxContainer"]
margin_top = 170.0
margin_right = 234.0
margin_bottom = 190.0
text = "Equip"

[node name="HBoxContainer2" type="HBoxContainer" parent="LootScreen/MarginContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 752.0
margin_bottom = 422.0
alignment = 1

[node name="DiscardButton" type="Button" parent="LootScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 318.0
margin_right = 434.0
margin_bottom = 20.0
text = "Discard Weapon"

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -45.0
margin_right = 195.0
margin_bottom = -15.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunBar" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -45.0
margin_right = -15.0
margin_bottom = -15.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun1" type="RichTextLabel" parent="GunBar"]
margin_left = 7.0
margin_right = 62.0
margin_bottom = 30.0
rect_min_size = Vector2( 55, 0 )
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][color=aqua][ 1 ][/color]
[color=yellow]Dec.[/color] L1[/center]"
text = "[ 1 ]
Dec. L1"
scroll_active = false

[node name="Gun2" type="RichTextLabel" parent="GunBar"]
margin_left = 66.0
margin_right = 121.0
margin_bottom = 30.0
rect_min_size = Vector2( 55, 0 )
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][color=aqua][ 2 ][/color]
[color=yellow]----[/color] L1[/center]"
text = "[ 2 ]
---- L1"
scroll_active = false

[node name="Gun3" type="RichTextLabel" parent="GunBar"]
margin_left = 125.0
margin_right = 180.0
margin_bottom = 30.0
rect_min_size = Vector2( 55, 0 )
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][color=aqua][ 3 ][/color]
[color=yellow]----[/color] L1[/center]"
text = "[ 3 ]
---- L1"
scroll_active = false

[node name="RespawnScreen" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -90.0
margin_right = 180.0
margin_bottom = 90.0
color = Color( 0.176471, 0, 0, 0.764706 )

[node name="VBoxContainer" type="VBoxContainer" parent="RespawnScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="RespawnScreen/VBoxContainer"]
margin_top = 35.0
margin_right = 360.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]You have fallen 
under [color=red]7[/color]'s influence[/center]"
text = "You have fallen 
under 7's influence"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="RespawnScreen/VBoxContainer"]
margin_top = 117.0
margin_right = 360.0
margin_bottom = 145.0

[node name="RespawnButton" type="Button" parent="RespawnScreen/VBoxContainer/CenterContainer"]
margin_left = 125.0
margin_right = 235.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "Respawn"

[node name="Tween" type="Tween" parent="."]

[node name="PauseMenu" type="PopupPanel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 360.0
margin_top = 135.0
margin_right = -360.0
margin_bottom = -162.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 212.0
margin_bottom = 215.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseResume" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 20.0
text = "Resume"

[node name="PauseDie" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 192.0
margin_bottom = 55.0
text = "Die (Stuck)"

[node name="PauseFullscreen" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 192.0
margin_bottom = 90.0
text = "Full Screen"

[node name="PauseSettings" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 192.0
margin_bottom = 125.0
text = "Settings"

[node name="PauseMenu" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 192.0
margin_bottom = 160.0
text = "Main Menu"

[node name="PauseQuit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 192.0
margin_bottom = 195.0
text = "Quit"

[connection signal="popup_hide" from="CharacterSheet" to="." method="_on_CharacterSheet_popup_hide"]
[connection signal="mouse_entered" from="CharacterSheet/MarginContainer/VBoxContainer/Stat1" to="." method="_on_stat_mouse_entered" binds= [ "addition" ]]
[connection signal="mouse_exited" from="CharacterSheet/MarginContainer/VBoxContainer/Stat1" to="." method="_on_stat_mouse_exited" binds= [ "addition" ]]
[connection signal="mouse_entered" from="CharacterSheet/MarginContainer/VBoxContainer/Stat2" to="." method="_on_stat_mouse_entered" binds= [ "multiplication" ]]
[connection signal="mouse_exited" from="CharacterSheet/MarginContainer/VBoxContainer/Stat2" to="." method="_on_stat_mouse_exited" binds= [ "multiplication" ]]
[connection signal="mouse_entered" from="CharacterSheet/MarginContainer/VBoxContainer/Stat3" to="." method="_on_stat_mouse_entered" binds= [ "subtraction" ]]
[connection signal="mouse_exited" from="CharacterSheet/MarginContainer/VBoxContainer/Stat3" to="." method="_on_stat_mouse_exited" binds= [ "subtraction" ]]
[connection signal="mouse_entered" from="CharacterSheet/MarginContainer/VBoxContainer/Stat4" to="." method="_on_stat_mouse_entered" binds= [ "division" ]]
[connection signal="mouse_exited" from="CharacterSheet/MarginContainer/VBoxContainer/Stat4" to="." method="_on_stat_mouse_exited" binds= [ "division" ]]
[connection signal="pressed" from="CharacterSheet/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="popup_hide" from="LootScreen" to="." method="_on_LootScreen_popup_hide"]
[connection signal="pressed" from="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/EquipButton1" to="." method="_on_EquipButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/EquipButton2" to="." method="_on_EquipButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="LootScreen/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/VBoxContainer/EquipButton3" to="." method="_on_EquipButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="LootScreen/MarginContainer/VBoxContainer/HBoxContainer2/DiscardButton" to="." method="_on_DiscardButton_pressed"]
[connection signal="pressed" from="RespawnScreen/VBoxContainer/CenterContainer/RespawnButton" to="." method="_on_RespawnButton_pressed"]
[connection signal="popup_hide" from="PauseMenu" to="." method="_on_PauseMenu_popup_hide"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseResume" to="." method="_on_PauseResume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseDie" to="." method="_on_PauseDie_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseFullscreen" to="." method="_on_PauseFullscreen_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseSettings" to="." method="_on_PauseSettings_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseMenu" to="." method="_on_PauseMenu_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/PauseQuit" to="." method="_on_PauseQuit_pressed"]
